Fix Dockerfile comment format
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@
 
 ####
 # base_image - Bare bones image with the base packages needed to run
-               Mayan EDMS.
+#              Mayan EDMS.
 ####
 
 FROM debian:10.8-slim as base_image
