Make the Supervisord configuration path a literal
Add the config files `SUPERVISOR_CONFIGURATION_DIRECTORY` and
`SUPERVISOR_CONFIGURATION_FILENAME`. These are now used by the
Dockerfile and the documenation.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/config.env
+++ b/config.env
@@ -29,3 +29,5 @@ PYTHON_REDIS_VERSION=3.5.3
 SOURCE_CODE_REPOSITORY=https://gitlab.com/mayan-edms/mayan-edms/
 SOURCE_CODE_GIT=https://gitlab.com/mayan-edms/mayan-edms.git
 SOURCE_CODE_ISSUES=https://gitlab.com/mayan-edms/mayan-edms/issues/
+SUPERVISOR_CONFIGURATION_DIRECTORY=/etc/supervisor/conf.d/
+SUPERVISOR_CONFIGURATION_FILENAME=mayan-edms.conf
