Add commented Docker compose database port entry
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -67,6 +67,9 @@ services:
     image: postgres:${MAYAN_DOCKER_POSTGRES_TAG:-10.15-alpine}
     networks:
       - bridge
+    # Disable to allow external access to the database.    
+    # ports:
+    #  - "5432:5432"
     restart: unless-stopped
     volumes:
       - ${MAYAN_POSTGRES_VOLUME:-postgres}:/var/lib/postgresql/data
