--- a/config.env
+++ b/config.env
@@ -28,6 +28,7 @@ DOCKER_RABBITMQ_IMAGE_VERSION=rabbitmq:3.8-alpine
 DOCKER_REDIS_IMAGE_VERSION=redis:6.0-alpine
 # Gunicorn
 GUNICORN_JITTER=50
+GUNICORN_LIMIT_REQUEST_LINE=4094
 GUNICORN_MAX_REQUESTS=500
 GUNICORN_TIMEOUT=120
 GUNICORN_WORKER_CLASS=sync
