Add comments regarding RabbitMQ management
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/.env
+++ b/docker/.env
@@ -6,3 +6,7 @@
 
 # MAYAN_DOCKER_IMAGE_NAME=mayanedms/mayanedms
 # MAYAN_DOCKER_IMAGE_TAG=s4.0
+
+# Enable to use the RabbitMQ image with the management plugin.
+# Also port mapping 15672:15672 in docker-compose file.
+# MAYAN_DOCKER_RABBITMQ_TAG=3.8-management-alpine
