--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -135,7 +135,7 @@ job_documentation_build:
     - apt-get install -qq enchant make python3-venv python3-dev
     - python3 -m venv venv
     - . venv/bin/activate
-  image: debian:10.9-slim
+  image: debian:10.10-slim
   only:
     - releases/all_major
     - releases/documentation
@@ -154,7 +154,7 @@ job_documentation_push:
     - 'which ssh-agent || ( apt-get update --yes && apt-get install -qq openssh-client rsync --yes )'
     - eval $(ssh-agent -s)
     - echo "$DOCUMENTATION_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
-  image: debian:10.9-slim
+  image: debian:10.10-slim
   only:
     - releases/all_major
     - releases/documentation
@@ -177,7 +177,7 @@ job_python_build:
     - python3 -m venv venv
     - . venv/bin/activate
     - pip install pip==$PYTHON_PIP_VERSION
-  image: debian:10.9-slim
+  image: debian:10.10-slim
   only:
     - releases/all_major
     - releases/all_minor
@@ -197,7 +197,7 @@ job_python_push_pypi:
     - python3 -m venv venv
     - . venv/bin/activate
     - pip install pip==$PYTHON_PIP_VERSION
-  image: debian:10.9-slim
+  image: debian:10.10-slim
   only:
     - releases/all_major
     - releases/all_minor
@@ -230,7 +230,7 @@ job_python_push_pypi:
     paths:
       - ~/.cache/pip/
       - /var/cache/apt/archives/
-  image: debian:10.9-slim
+  image: debian:10.10-slim
   only:
     - releases/all_major
     - releases/all_minor
@@ -248,9 +248,10 @@ job_mysql_upgrade_test:
     - . venv/bin/activate
     - pip install mysqlclient==$PYTHON_MYSQL_VERSION
     - mysql -h"$MYSQL_PORT_3306_TCP_ADDR" -P"$MYSQL_PORT_3306_TCP_PORT" -uroot -p"$MYSQL_ENV_MYSQL_ROOT_PASSWORD" -e "set global character_set_server=utf8mb4;"
-    - mayan-edms.py initialsetup --settings=mayan.settings.testing.gitlab-ci.db_mysql
+    - export MAYAN_DATABASES="{'default':{'ENGINE':'django.db.backends.mysql','NAME':'mayan','PASSWORD':'mayanuserpass','USER':'mayan','HOST':'$MYSQL_PORT_3306_TCP_ADDR'}}"
+    - mayan-edms.py initialsetup --settings=mayan.settings.testing.gitlab-ci
     - pip install dist/mayan_edms-*.whl
-    - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci.db_mysql
+    - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci
   services:
     - mysql:8.0
   tags:
@@ -267,9 +268,10 @@ job_postgres_upgrade_test:
     - apt-get install -qq libpq-dev
     - . venv/bin/activate
     - pip install psycopg2==$PYTHON_PSYCOPG2_VERSION
-    - mayan-edms.py initialsetup --settings=mayan.settings.testing.gitlab-ci.db_postgres
+    - export MAYAN_DATABASES="{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'mayan','PASSWORD':'mayanuserpass','USER':'mayan','HOST':'postgres'}}"
+    - mayan-edms.py initialsetup --settings=mayan.settings.testing.gitlab-ci
     - pip install dist/mayan_edms-*.whl
-    - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci.db_postgres
+    - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci
   services:
     - postgres:10.15-alpine
   tags:
@@ -305,7 +307,7 @@ job_sqlite_upgrade_test:
     paths:
       - ~/.cache/pip/
       - /var/cache/apt/archives/
-  image: debian:10.9-slim
+  image: debian:10.10-slim
   only:
     - releases/all_major
     - releases/all_minor
