Backport makefile and config improvements
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/config.env
+++ b/config.env
@@ -1,4 +1,6 @@
+# Binary versions
 BINARY_DOCKER_COMPOSE_VERSION=1.25.5
+# Default setting values
 DEFAULT_DATABASE_NAME=mayan
 DEFAULT_DATABASE_PASSWORD=mayanuserpass
 DEFAULT_DATABASE_USER=mayan
@@ -8,8 +10,10 @@ DEFAULT_RABBITMQ_PASSWORD=mayanrabbitmqpassword
 DEFAULT_RABBITMQ_USER=mayan
 DEFAULT_RABBITMQ_VHOST=mayan
 DEFAULT_REDIS_PASSWORD=mayanredispassword
+# Docker registry
 DOCKER_HOST_REGISTRY_NAME=docker-registry.local
 DOCKER_HOST_REGISTRY_PORT=5000
+# Docker images
 DOCKER_IMAGE_MAYAN_NAME=mayanedms/mayanedms
 DOCKER_LINUX_IMAGE_VERSION=ubuntu:19.10
 DOCKER_MYSQL_IMAGE_VERSION=mysql:5.7
@@ -18,6 +22,7 @@ DOCKER_POSTGRES_IMAGE_VERSION=postgres:9.6-alpine
 DOCKER_PYTHON_IMAGE_VERSION=python:3-slim
 DOCKER_RABBITMQ_IMAGE_VERSION=rabbitmq:3-alpine
 DOCKER_REDIS_IMAGE_VERSION=redis:5.0-alpine
+# Python libraries
 PYTHON_AMQP_VERSION=2.5.2
 PYTHON_FLOWER_VERSION=0.9.3
 PYTHON_MYSQL_VERSION=1.4.6
@@ -26,6 +31,7 @@ PYTHON_PIP_VERSION=21.0.1
 PYTHON_PSYCOPG2_VERSION=2.8.6
 PYTHON_PSUTIL_VERSION=5.7.0
 PYTHON_REDIS_VERSION=3.5.3
+# URLs
 SOURCE_CODE_REPOSITORY=https://gitlab.com/mayan-edms/mayan-edms/
 SOURCE_CODE_GIT=https://gitlab.com/mayan-edms/mayan-edms.git
 SOURCE_CODE_ISSUES=https://gitlab.com/mayan-edms/mayan-edms/issues/
