Change default shell to sh
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -67,7 +67,7 @@ services:
     image: postgres:${MAYAN_DOCKER_POSTGRES_TAG:-10.15-alpine}
     networks:
       - bridge
-    # Disable to allow external access to the database.    
+    # Disable to allow external access to the database.
     # ports:
     #  - "5432:5432"
     restart: unless-stopped
@@ -130,7 +130,7 @@ services:
     devices:
       - "/dev/fuse:/dev/fuse"
     entrypoint:
-      - /bin/bash
+      - /bin/sh
       - -c
       - 'mkdir --parents /mnt/index && chown mayan:mayan /mnt/index && /usr/local/bin/entrypoint.sh run_command "mountindex --allow-other creation_date /mnt/index"'  # Replace "creation_date" with the index of your choice.
     profiles:
