Fix Docker Compose optional frontend
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -115,8 +115,7 @@ services:
   frontend:
     <<: *mayan-container
     command:
-      - run_worker
-      - fast
+      - run_frontend
     ports:
       - "81:8000"
     profiles:
