Platform & Docker updates
- Rename environment variable ``MAYAN_GUNICORN_JITTER`` to
  ``MAYAN_GUNICORN_REQUESTS_JITTER``.
- Support changing the operating system user when creating the
  supervisord file using the environment variable ``MAYAN_OS_USERNAME``.
- Reorder the Gunicorn arguments.
- Make the ``DJANGO_SETTINGS_MODULE`` environment variable an alias of
  ``MAYAN_SETTINGS_MODULE`` in the supervisord file.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/config.env
+++ b/config.env
@@ -30,9 +30,9 @@ DOCKER_PYTHON_IMAGE_VERSION=python:3.8-slim
 DOCKER_RABBITMQ_IMAGE_VERSION=rabbitmq:3.9-alpine
 DOCKER_REDIS_IMAGE_VERSION=redis:6.2-alpine
 # Gunicorn
-GUNICORN_JITTER=50
 GUNICORN_LIMIT_REQUEST_LINE=4094
 GUNICORN_MAX_REQUESTS=500
+GUNICORN_REQUESTS_JITTER=50
 GUNICORN_TIMEOUT=120
 GUNICORN_WORKER_CLASS=sync
 GUNICORN_WORKERS=3
