Fix extra_celery_beat command line
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -177,9 +177,7 @@ services:
     <<: *mayan-container
     command:
       - run_celery
-      - beat
-      - --pidfile=
-      - --loglevel=ERROR
+      - "beat --pidfile= --loglevel=ERROR"
     profiles:
       - extra_celery_beat
 
