Move Docker Compose variables to the correct file
Move `COMPOSE_PROJECT_NAME` and `COMPOSE_PROFILES` to the .env
file.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/.env
+++ b/docker/.env
@@ -4,6 +4,12 @@
 # To pass values as environment variables to the running containers use
 # the env_file instead.
 
+# Default project name. Change this using the docker-compose `-p, --project-name NAME` option.
+COMPOSE_PROJECT_NAME=mayan
+
+# Default profile
+COMPOSE_PROFILES=all_in_one,postgresql
+
 # MAYAN_DOCKER_IMAGE_NAME=mayanedms/mayanedms
 # MAYAN_DOCKER_IMAGE_TAG=s4.1
 
